added a few python packages

--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -26,6 +26,7 @@ pydantic-core==2.23.4 ; python_full_version == "3.12.7"
 pydantic-extra-types==2.10.0 ; python_full_version == "3.12.7"
 pydantic-settings==2.6.1 ; python_full_version == "3.12.7"
 pydantic==2.9.2 ; python_full_version == "3.12.7"
+pydantic[email]==2.9.2 ; python_full_version == "3.12.7"
 pygments==2.18.0 ; python_full_version == "3.12.7"
 python-dotenv==1.0.1 ; python_full_version == "3.12.7"
 python-multipart==0.0.17 ; python_full_version == "3.12.7"
@@ -34,8 +35,8 @@ rich==13.9.4 ; python_full_version == "3.12.7"
 shellingham==1.5.4 ; python_full_version == "3.12.7"
 sniffio==1.3.1 ; python_full_version == "3.12.7"
 sqlalchemy[asyncio]==2.0.36 ; python_full_version == "3.12.7"
-starlette==0.41.2 ; python_full_version == "3.12.7"
-typer==0.13.0 ; python_full_version == "3.12.7"
+starlette==0.41.3 ; python_full_version == "3.12.7"
+typer==0.13.1 ; python_full_version == "3.12.7"
 typing-extensions==4.12.2 ; python_full_version == "3.12.7"
 ujson==5.10.0 ; python_full_version == "3.12.7"
 uvicorn[standard]==0.32.0 ; python_full_version == "3.12.7"
