--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = {extras = ["asyncio"], version = "2.0.36"}
 uvicorn = {extras = ["standard"], version = "0.32.0"}
 gunicorn = "23.0.0"
 fastapi = {extras = ["all"], version = "0.115.5"}
+pydantic = {extras = ["email"], version = "2.9.2"}
 asyncpg = "0.30.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -21,6 +22,10 @@ mypy = "*"
 # test
 pytest = "8.3.3"
 pytest-asyncio = "0.24.0"
+coverage = "7.6.7"
+pytest-cov = "6.0.0"
+pytest-mimesis = "1.1.0"
+pytest-mock = "3.14.0"
 pytest-postgresql = "6.1.1"
 psycopg = {extras = ["binary"], version = "3.2.3"}
 httpx = "0.27.2"
@@ -34,9 +39,13 @@ testpaths = "tests"
 python_files = "test_*.py"
 python_functions = "test_*"
 python_classes = "Test* *Tests"
-addopts = "-vv -x"
 asyncio_mode = "auto"
 pythonpath = ["."]
+addopts = [
+  "--strict-markers",
+  "--strict-config",
+  "-ra"
+]
 
 [tool.mypy]
 check_untyped_defs = true
