--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asyncpg==0.30.0 ; python_full_version == "3.12.7"
 certifi==2024.8.30 ; python_full_version == "3.12.7"
 click==8.1.7 ; python_full_version == "3.12.7"
 colorama==0.4.6 ; python_full_version == "3.12.7" and (sys_platform == "win32" or platform_system == "Windows")
+coverage==7.6.7 ; python_full_version == "3.12.7"
+coverage[toml]==7.6.7 ; python_full_version == "3.12.7"
 dnspython==2.7.0 ; python_full_version == "3.12.7"
 email-validator==2.2.0 ; python_full_version == "3.12.7"
 fastapi-cli[standard]==0.0.5 ; python_full_version == "3.12.7"
@@ -23,6 +25,7 @@ mako==1.3.6 ; python_full_version == "3.12.7"
 markdown-it-py==3.0.0 ; python_full_version == "3.12.7"
 markupsafe==3.0.2 ; python_full_version == "3.12.7"
 mdurl==0.1.2 ; python_full_version == "3.12.7"
+mimesis==4.1.3 ; python_full_version == "3.12.7"
 mirakuru==2.5.3 ; python_full_version == "3.12.7"
 mypy-extensions==1.0.0 ; python_full_version == "3.12.7"
 mypy==1.13.0 ; python_full_version == "3.12.7"
@@ -38,8 +41,12 @@ pydantic-core==2.23.4 ; python_full_version == "3.12.7"
 pydantic-extra-types==2.10.0 ; python_full_version == "3.12.7"
 pydantic-settings==2.6.1 ; python_full_version == "3.12.7"
 pydantic==2.9.2 ; python_full_version == "3.12.7"
+pydantic[email]==2.9.2 ; python_full_version == "3.12.7"
 pygments==2.18.0 ; python_full_version == "3.12.7"
 pytest-asyncio==0.24.0 ; python_full_version == "3.12.7"
+pytest-cov==6.0.0 ; python_full_version == "3.12.7"
+pytest-mimesis==1.1.0 ; python_full_version == "3.12.7"
+pytest-mock==3.14.0 ; python_full_version == "3.12.7"
 pytest-postgresql==6.1.1 ; python_full_version == "3.12.7"
 pytest==8.3.3 ; python_full_version == "3.12.7"
 python-dotenv==1.0.1 ; python_full_version == "3.12.7"
@@ -51,8 +58,8 @@ shellingham==1.5.4 ; python_full_version == "3.12.7"
 sniffio==1.3.1 ; python_full_version == "3.12.7"
 sqlalchemy==2.0.36 ; python_full_version == "3.12.7"
 sqlalchemy[asyncio]==2.0.36 ; python_full_version == "3.12.7"
-starlette==0.41.2 ; python_full_version == "3.12.7"
-typer==0.13.0 ; python_full_version == "3.12.7"
+starlette==0.41.3 ; python_full_version == "3.12.7"
+typer==0.13.1 ; python_full_version == "3.12.7"
 typing-extensions==4.12.2 ; python_full_version == "3.12.7"
 tzdata==2024.2 ; sys_platform == "win32" and python_full_version == "3.12.7"
 ujson==5.10.0 ; python_full_version == "3.12.7"
