--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,3 +1,4 @@
+alembic==1.14.0 ; python_full_version == "3.12.7"
 annotated-types==0.7.0 ; python_full_version == "3.12.7"
 anyio==4.6.2.post1 ; python_full_version == "3.12.7"
 asyncpg==0.30.0 ; python_full_version == "3.12.7"
@@ -17,9 +18,11 @@ httpx==0.27.2 ; python_full_version == "3.12.7"
 idna==3.10 ; python_full_version == "3.12.7"
 itsdangerous==2.2.0 ; python_full_version == "3.12.7"
 jinja2==3.1.4 ; python_full_version == "3.12.7"
+mako==1.3.6 ; python_full_version == "3.12.7"
 markdown-it-py==3.0.0 ; python_full_version == "3.12.7"
 markupsafe==3.0.2 ; python_full_version == "3.12.7"
 mdurl==0.1.2 ; python_full_version == "3.12.7"
+more-itertools==10.5.0 ; python_full_version == "3.12.7"
 orjson==3.10.11 ; python_full_version == "3.12.7"
 packaging==24.2 ; python_full_version == "3.12.7"
 pydantic-core==2.23.4 ; python_full_version == "3.12.7"
@@ -34,6 +37,7 @@ pyyaml==6.0.2 ; python_full_version == "3.12.7"
 rich==13.9.4 ; python_full_version == "3.12.7"
 shellingham==1.5.4 ; python_full_version == "3.12.7"
 sniffio==1.3.1 ; python_full_version == "3.12.7"
+sqlalchemy==2.0.36 ; python_full_version == "3.12.7"
 sqlalchemy[asyncio]==2.0.36 ; python_full_version == "3.12.7"
 starlette==0.41.3 ; python_full_version == "3.12.7"
 typer==0.13.1 ; python_full_version == "3.12.7"
