--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ markupsafe==3.0.2 ; python_full_version == "3.12.7"
 mdurl==0.1.2 ; python_full_version == "3.12.7"
 mimesis==4.1.3 ; python_full_version == "3.12.7"
 mirakuru==2.5.3 ; python_full_version == "3.12.7"
+more-itertools==10.5.0 ; python_full_version == "3.12.7"
 mypy-extensions==1.0.0 ; python_full_version == "3.12.7"
 mypy==1.13.0 ; python_full_version == "3.12.7"
 orjson==3.10.11 ; python_full_version == "3.12.7"
@@ -53,7 +54,7 @@ python-dotenv==1.0.1 ; python_full_version == "3.12.7"
 python-multipart==0.0.17 ; python_full_version == "3.12.7"
 pyyaml==6.0.2 ; python_full_version == "3.12.7"
 rich==13.9.4 ; python_full_version == "3.12.7"
-setuptools==75.5.0 ; python_full_version == "3.12.7"
+setuptools==75.6.0 ; python_full_version == "3.12.7"
 shellingham==1.5.4 ; python_full_version == "3.12.7"
 sniffio==1.3.1 ; python_full_version == "3.12.7"
 sqlalchemy==2.0.36 ; python_full_version == "3.12.7"
